--- a/main/styles/globals.css
+++ b/main/styles/globals.css
@@ -9,21 +9,8 @@
   box-sizing: border-box;
 }
 
-/* Experiência para o usuário tablet e mobile. */
-@media (max-width: 1080px) {
-  html {
-    font-size: 93.75%;
-  }
-}
-
-@media (max-width: 720px) {
-  html {
-    font-size: 87.5%;
-  }
-}
-
 :root {
-  --cinza-100: #332e33;
+  --cinza-100: #27272A;
   --cinza-600: #111111;
   --laranja-600: #ea580c;
 }
@@ -51,6 +38,8 @@ a {
   text-decoration: none;
 }
 
+/* Mudanças específicas no CSS */
+
 .background {
   background-image: linear-gradient(
       to top,
@@ -67,7 +56,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #332e33;
+  background-color: #27272A;
   gap: 1rem;
   border-radius: 0.367rem;
   padding: 6px;
