--- a/main/styles/globals.css
+++ b/main/styles/globals.css
@@ -40,6 +40,7 @@ a {
 
 /* Mudanças específicas no CSS */
 
+
 .background {
   background-image: linear-gradient(
       to top,
@@ -65,6 +66,7 @@ a {
 
 .card:hover {
   scale: 1.1;
+  color: #ea580c;
 }
 
 .card svg {
