--- a/main/styles/globals.css
+++ b/main/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono:wght@300;400&family=Sono&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -22,12 +24,17 @@ body {
   transition: all ease-in-out;
 }
 /* Definindo as fontes e o tamanho nos globais. */
-body,
-input,
-textarea,
-select,
-button {
-  font: 400 1rem "Oxygen", sans-serif;
+h1,
+h2,
+h3,
+div {
+  font: 400 1rem "Roboto", sans-serif;
+}
+
+p,
+a,
+span {
+  font: 400 1rem "Roboto Mono", sans-serif;
 }
 
 button {
@@ -83,7 +90,7 @@ a {
   align-items: center;
 
   background-color: #27272a;
-  
+
   gap: 1rem;
   border-radius: 0.367rem;
   padding: 6px;
@@ -106,12 +113,12 @@ a {
 
 .about-small-pictures {
   width: 8rem;
-  height: 22rem;
+  height: 24rem;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+
   gap: 0.5rem;
 }
 
@@ -126,9 +133,9 @@ a {
   border-radius: 8px;
 
   width: 9.6rem;
-  max-height: 16rem;
+  max-height: 17rem;
 }
 
-.vazio{
+.vazio {
   border: 2px solid #dc2626;
 }
