--- a/main/styles/globals.css
+++ b/main/styles/globals.css
@@ -71,7 +71,7 @@ a {
 
 /* Mudanças específicas no CSS */
 
-.background {
+body {
   background-image: linear-gradient(
       to top,
       rgba(17, 17, 17, 0.1),
